nuovi progetti aggiunti

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "port": 9003,
             "pathMappings": {
                 "/template_progetto/": "${workspaceRoot}\\microservices\\template_progetto\\project", //esempio
-                "/geo-tools/": "${workspaceRoot}\\microservices\\geo-tools\\project" //geo-tools microservice
+                "/geo-tools/": "${workspaceRoot}\\microservices\\geo-tools\\project", //geo-tools microservice
+                "/hipalm/": "${workspaceRoot}\\microservices\\hipalm\\project" //hipalm microservice
             }
         }
     ]
