RIsolto il problema con il microservizio hipalm, ora ha il db hipalm funzionante

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - --innodb_use_native_aio=0
     container_name: db-test
     ports:
-      - 33060:3306
+      - 33081:3306
 
   # DB 
   db:
@@ -28,7 +28,7 @@ services:
       - --innodb_use_native_aio=0
     container_name: db
     ports:
-      - 33061:3306    
+      - 33082:3306    
 
   phpmyadmin:
     container_name: phpmyadmin
@@ -81,3 +81,22 @@ services:
     ports:
       - 8001:80
 
+    
+# microservice hipalm
+  hipalm:
+    container_name: hipalm
+    build:
+      context: .
+      dockerfile: microservices/hipalm/Dockerfile
+    entrypoint: php -S 0.0.0.0:80 -t public
+    environment:
+      XDEBUG_MODE: develop,debug
+      XDEBUG_CONFIG: client_host=host.docker.internal client_port=9003
+    volumes:
+      - ./microservices/hipalm/project:/hipalm # cartella progetto
+      - ./microservices/hipalm/xdebug/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini # impostazioni per debug
+      - ./microservices/hipalm/php/php.ini:/usr/local/etc/php/php.ini # impostazioni php
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    ports:
+      - 8002:80
