--- a/microservices/db/.env.db-hipalm
+++ b/microservices/db/.env.db-hipalm
@@ -1,5 +1,6 @@
-MYSQL_DATABASE: "hipalm"  
-MYSQL_USER: "hipalm"  
-MYSQL_PASSWORD: "root"  
-MYSQL_ROOT_PASSWORD: "root"
-DIR_HOST: "./microservices/db/mysqldata"
+DB_CONNECTION=mysql
+MYSQL_DATABASE=hipalm 
+MYSQL_USER=hipalm  
+MYSQL_PASSWORD=root  
+MYSQL_ROOT_PASSWORD=root
+DIR_HOST="./microservices/db/mysqldata"
