--- a/microservices/db/.env.db-hipalm
+++ b/microservices/db/.env.db-hipalm
@@ -1,6 +1,5 @@
-DB_CONNECTION=mysql
-MYSQL_DATABASE=hipalm 
-MYSQL_USER=hipalm  
-MYSQL_PASSWORD=root  
-MYSQL_ROOT_PASSWORD=root
-DIR_HOST="./microservices/db/mysqldata"
+MYSQL_DATABASE: "hipalm"  
+MYSQL_USER: "hipalm"  
+MYSQL_PASSWORD: "root"  
+MYSQL_ROOT_PASSWORD: "root"
+DIR_HOST: "./microservices/db/mysqldata"
