--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   db:
     image: mysql:8.0.32
     env_file:
-      - microservices/db/.env.db-hipalm
+      - microservices/db/.env.db-cv
     command:
       - --table_definition_cache=100
       - --performance_schema=0
@@ -31,8 +31,8 @@ services:
   phpmyadmin:
     container_name: phpmyadmin
     depends_on:
-      - db
       - db-test
+      - db
     image: phpmyadmin/phpmyadmin
     ports:
       - 8081:80
@@ -59,3 +59,22 @@ services:
       - "host.docker.internal:host-gateway"
     ports:
       - 8000:80
+    
+# microservice creacv
+  creacv:
+    container_name: creacv
+    build:
+      context: .
+      dockerfile: microservices/creacv/Dockerfile
+    entrypoint: php -S 0.0.0.0:80 -t public
+    environment:
+      XDEBUG_MODE: develop,debug
+      XDEBUG_CONFIG: client_host=host.docker.internal client_port=9003
+    volumes:
+      - ./microservices/creacv/project:/creacv # cartella progetto
+      - ./microservices/creacv/xdebug/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini # impostazioni per debug
+      - ./microservices/creacv/php/php.ini:/usr/local/etc/php/php.ini # impostazioni php
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    ports:
+      - 8001:80
