creacv primo commit

--- a/microservices/creacv/.vscode/launch.json
+++ b/microservices/creacv/.vscode/launch.json
@@ -10,8 +10,7 @@
             "request": "launch",
             "port": 9003,
             "pathMappings": {
-                "/template/": "${workspaceRoot}\\microservices\\template\\project", //esempio
-                "/creacv/": "${workspaceRoot}\\microservices\\creacv\\project" //creacv microservice
+                "/${workspaceFolderBasename}/": "${workspaceRoot}\\project"
             }
         }
     ]
