--- a/microservices/db/.env.db-cv
+++ b/microservices/db/.env.db-cv
@@ -1,5 +1,5 @@
-MYSQL_DATABASE: "cv"  
+MYSQL_DATABASE: "datacv"  
 MYSQL_USER: "cv"  
 MYSQL_PASSWORD: "root"  
 MYSQL_ROOT_PASSWORD: "root"
-DIR_HOST: "./microservices/db/mysqldata"
+DIR_HOST: "./microservices/db/datacv/mysqldata"
