--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,17 +14,17 @@ services:
     ports:
       - 33081:3306
 
-  # DB 
-  db:
+  # DB datacv
+  db-cv:
     image: mysql:8.0.32
     env_file:
-      - microservices/db/.env.db
+      - microservices/db/.env.db-cv
     command:
       - --table_definition_cache=100
       - --performance_schema=0
       - --default-authentication-plugin=mysql_native_password
       - --innodb_use_native_aio=0
-    container_name: db
+    container_name: db-cv
     ports:
       - 33082:3306
 
@@ -32,10 +32,30 @@ services:
     container_name: phpmyadmin
     depends_on:
       - db-test
-      - db
+      - db-cv
     image: phpmyadmin/phpmyadmin
     ports:
       - 8081:80
     environment:
-      PMA_HOST: db
+      PMA_HOST: db-cv
       MYSQL_ROOT_PASSWORD: root
+
+    
+# microservice creacv
+  creacv:
+    container_name: creacv
+    build:
+      context: .
+      dockerfile: microservices/creacv/Dockerfile
+    entrypoint: php -S 0.0.0.0:80 -t public
+    environment:
+      XDEBUG_MODE: develop,debug
+      XDEBUG_CONFIG: client_host=host.docker.internal client_port=9003
+    volumes:
+      - ./microservices/creacv/project:/creacv # cartella progetto
+      - ./microservices/creacv/xdebug/docker-php-ext-xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini # impostazioni per debug
+      - ./microservices/creacv/php/php.ini:/usr/local/etc/php/php.ini # impostazioni php
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    ports:
+      - 8000:80
