--- a/microservices/creacv/php/php.ini
+++ b/microservices/creacv/php/php.ini
@@ -2,4 +2,6 @@ extension=pdo_mysql.so
 file_uploads = On
 upload_tmp_dir = /tmp
 post_max_size = 100M
-upload_max_filesize = 100M
+upload_max_filesize = 3000
+max_execution_time = 300
+max_input_time= 3000
