--- a/microservices/creacv/php/php.ini
+++ b/microservices/creacv/php/php.ini
@@ -1,7 +1,7 @@
 extension=pdo_mysql.so
 file_uploads = On
-upload_tmp_dir = /tmp
-post_max_size = 100M
-upload_max_filesize = 3000
-max_execution_time = 300
-max_input_time= 3000
+upload_tmp_dir = /tmp/uploads
+memory_limit = 64M
+upload_max_filesize = 64M
+post_max_size = 64M
+max_execution_time = 60
