--- a/microservices/creacv/php/php.ini
+++ b/microservices/creacv/php/php.ini
@@ -5,3 +5,6 @@ memory_limit = 64M
 upload_max_filesize = 64M
 post_max_size = 64M
 max_execution_time = 60
+extension=gd
+extension=zip
+extension=php_zip.dll
