--- a/microservices/creacv/project/composer.json
+++ b/microservices/creacv/project/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "phpoffice/phpword": "^1.3",
+        "symfony/psr-http-message-bridge": "^7.3",
         "symfony/validator": "^7.3"
     },
     "require-dev": {
