--- a/microservices/template/php/php.ini
+++ b/microservices/template/php/php.ini
@@ -1,1 +1,7 @@
 extension=pdo_mysql.so
+file_uploads = On
+upload_tmp_dir = /tmp/uploads
+memory_limit = 64M
+upload_max_filesize = 64M
+post_max_size = 64M
+max_execution_time = 60
