--- a/microservices/template/xdebug/docker-php-ext-xdebug.ini
+++ b/microservices/template/xdebug/docker-php-ext-xdebug.ini
@@ -1,6 +1,6 @@
 [xdebug]
 zend_extension=xdebug
-xdebug.mode=off
+xdebug.mode=develop,debug
 xdebug.start_with_request = yes
 xdebug.client_host = "host.docker.internal"
 xdebug.idekey="VSCODE"
