--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 microservices/db/data
+.vscode/launch.json
+conf/.vscode/launch.json
+microservices/creacv/.vscode/launch.json
+microservices/template/.vscode/launch.json
