--- a/conf/.vscode/launch.json
+++ b/conf/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "port": 9003,
             "pathMappings": {
-                "/${workspaceFolderBasename}/": "${workspaceRoot}/project"
+                "/${workspaceFolderBasename}/": "${workspaceRoot}\\project"
             }
         }
     ]
