--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ microservices/db/data
 .vscode/launch.json
 conf/.vscode/launch.json
 microservices/creacv/.vscode/launch.json
+microservices/template/.vscode/launch.json
