--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ microservices/db/data
 conf/.vscode/launch.json
 microservices/creacv/.vscode/launch.json
 microservices/template/.vscode/launch.json
+microservices/creacv/project/public/uploads/elaborato.docx
+microservices/creacv/project/public/elaborato.docx
+
