ignora file documenti generati

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ microservices/template/.vscode/launch.json
 microservices/creacv/project/public/uploads/elaborato.docx
 microservices/creacv/project/public/elaborato.docx
 
+microservices/creacv/project/app/Models/Document.php
+.gitignore
